--- a/Server/package.json
+++ b/Server/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {
-    "start": "nodemon server.js"
-  },
+ "scripts": {
+  "start": "forever start Server.js",
+  "stop": "forever stopall"
+},
   "keywords": [],
   "author": "",
   "license": "ISC",
