--- a/Server/package.json
+++ b/Server/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
  "scripts": {
-  "start": "forever start Server.js",
-  "stop": "forever stopall"
+  "start": "nodemon server.js"
 },
   "keywords": [],
   "author": "",
